--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.card{
+/* .card{
   border : 1px solid hsl(0, 0%, 80%);
   border-radius: 10px;
   box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
@@ -25,7 +25,7 @@
 .card .cardText{
   font-family: Arial, Helvetica, sans-serif;
   color: hsl(0, 0%, 30%);
-}
+} */
 /* 
 .button{
   background-color: hsl(200,100%,50%);
@@ -35,3 +35,53 @@
   border: none;
   cursor: pointer;
 } */
+
+.student{
+  font-family: Arial, sans-serif;
+  font-size: 2em;
+  padding: 10px;
+  border: 1px solid hsla(0,0%,50%,0.8);
+}
+
+.student p{
+  margin:0;
+}
+
+.welcome-message{
+  font-size: 2.5em;
+  background-color: hsl(120, 100%, 42%);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin:0;
+}
+.login-prompt{
+  font-size: 2.5em;
+  background-color: hsl(0, 100%, 42%);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin:0;
+}
+
+.list-category{
+  font-size: 2.5em;
+  font-weight: bold;
+  color: hsl(0, 0%, 20%);
+  margin-bottom: 10px;
+  text-align: center;
+  border: 3px solid;
+  border-radius: 5px;
+  background-color: hsl(185, 100%, 50%);
+}
+.list-items li{
+  font-size:2em;
+  list-style: none;
+  color: hsl(30, 11%, 7%);
+  text-align: center;
+  margin:0;
+}
+.list-items li:hover{
+  color: aquamarine;
+  cursor: pointer;
+}
